# ProductManagement

./: .dockerignore  .editorconfig  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
src/: config.py  exceptions.py  logger.py  main.py
src/api/: auth_router.py  category_router.py  product_router.py
src/api/admin/: views.py
src/api/auth/: decorator.py
src/application/domain/: category.py  product.py  user.py
src/application/services/: category_service.py  product_service.py  user_service.py
src/infrastructure/database/: database.py  models.py
src/infrastructure/database/init/: category.py  none_category.py  superadmin.py
src/infrastructure/database/repositories/: category_repository.py  product_repository.py  user_repository.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 1cdf0dedcf36_categories_and_products_models.py  6819d6998242_categories_and_products_models.py  b08746c7fcc9_user_model.py
src/infrastructure/utils/: token_service.py
