[tool.poetry]
name = "productmanagement"
version = "0.1.0"
description = ""
authors = ["Noloquideus <daniilmanukian@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.111.0" }
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
phonenumbers = "^8.13.39"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"
alembic = "^1.13.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
